--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Tirth Jain" width="80">
+          <img src="./assets/images/profile.png" alt="Tirth Jain" width="80">
         </figure>
 
         <div class="info-content">
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Ahmedabad, Gujarat, India</address>
+              <address>Ahmedabad, Gujarat</address>
             </div>
 
           </li>
@@ -176,9 +176,9 @@
             <button class="navbar-link" data-nav-link>Blog</button>
           </li> -->
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
-          </li>
+          </li> -->
 
         </ul>
 
@@ -591,7 +591,7 @@
 
           <div class="title-wrapper">
             <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
+              <ion-icon name="briefcase-outline"></ion-icon>
             </div>
 
             <h3 class="h3">Experience</h3>
@@ -600,8 +600,9 @@
           <ol class="timeline-list">
 
             <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Backend Development Intern</h4>
+              <h4 class="h4">Qurious Click Digital Agency</h4>
+              <br>
+              <h4 class="h4 timeline-item-title">Backend Development Intern</h4>    
 
               <span>Apr 2025 — Sep 2025</span>
 
@@ -610,9 +611,10 @@
               </p>
 
             </li>
-
+            <br>
             <li class="timeline-item">
-
+              <h4 class="h4">InfoLabz IT Services Pvt Ltd</h4>
+              <br>
               <h4 class="h4 timeline-item-title">Data Science Intern</h4>
 
               <span>Jun 2024 — Jul 2024</span>
@@ -642,11 +644,11 @@
         </section>
 
         <section class="skill">
-          <h3 class="h3 skills-title">My Skills</h3>
+          <h3 class="h3 skills-title">Skills</h3>
 
           <ul class="skills-list content-card">
             <!-- Programming Languages -->
-            <li class="skills-item"><h5 class="h5">Programming Languages : C, C++, Python </h5></li>
+            <li class="skills-item"><h5 class="h5">Programming Languages : C, C++, Python</h5></li>
 
             <!-- Web Development -->
             <li class="skills-item"><h5 class="h5">Web Development : HTML, CSS, JavaScript, PHP, WordPress </h5></li>
@@ -740,12 +742,12 @@
       <article class="portfolio" data-page="projects">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
 
-          <ul class="filter-list">
+          <!-- <ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
@@ -763,7 +765,7 @@
               <button data-filter-btn>Web development</button>
             </li>
 
-          </ul>
+          </ul> -->
 
           <div class="filter-select-box">
 
@@ -802,60 +804,60 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/jaintirth/HousePricePrediction">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/house-price-prediction.jpg" alt="house-price-prediction" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">House Price Prediction</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Machine Learning</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://github.com/jaintirth/todo_list">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/todo-list.jpg" alt="todo-list" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">To Do List</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Backend Development</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://github.com/jaintirth/Disease-Prediction-System">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/disease-prediction-system.jpg" alt="disease-prediction-system" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Disease Prediction System</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">Machine Learning</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
+            <!-- <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
                 <figure class="project-img">
@@ -961,7 +963,7 @@
                 <p class="project-category">Web development</p>
 
               </a>
-            </li>
+            </li> -->
 
           </ul>
 
