added filter in projects

--- a/index.html
+++ b/index.html
@@ -746,25 +746,25 @@
 
         <section class="projects">
 
-          <!-- <ul class="filter-list">
+          <ul class="filter-list">
 
             <li class="filter-item">
               <button class="active" data-filter-btn>All</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Backend Development</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>Machine Learning</button>
             </li>
 
-            <li class="filter-item">
+            <!-- <li class="filter-item">
               <button data-filter-btn>Web development</button>
-            </li>
+            </li> -->
 
-          </ul> -->
+          </ul>
 
           <div class="filter-select-box">
 
@@ -785,16 +785,16 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Backend Development</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>Machine Learning</button>
               </li>
 
-              <li class="select-item">
+              <!-- <li class="select-item">
                 <button data-select-item>Web development</button>
-              </li>
+              </li> -->
 
             </ul>
 
@@ -802,7 +802,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="machine learning">
               <a href="https://github.com/jaintirth/HousePricePrediction">
 
                 <figure class="project-img">
@@ -820,7 +820,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="backend development">
               <a href="https://github.com/jaintirth/todo_list">
 
                 <figure class="project-img">
@@ -838,7 +838,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web design">
+            <li class="project-item  active" data-filter-item data-category="machine learning">
               <a href="https://github.com/jaintirth/Disease-Prediction-System">
 
                 <figure class="project-img">
