fixed links to open in a new tab

--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/jaintirth" class="social-link">
+            <a href="https://www.linkedin.com/in/jaintirth" class="social-link" target="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://github.com/jaintirth" class="social-link">
+            <a href="https://github.com/jaintirth" class="social-link" target="_blank">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
@@ -803,7 +803,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="machine learning">
-              <a href="https://github.com/jaintirth/HousePricePrediction">
+              <a href="https://github.com/jaintirth/HousePricePrediction" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -821,7 +821,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="backend development">
-              <a href="https://github.com/jaintirth/todo_list">
+              <a href="https://github.com/jaintirth/todo_list" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -839,7 +839,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="machine learning">
-              <a href="https://github.com/jaintirth/Disease-Prediction-System">
+              <a href="https://github.com/jaintirth/Disease-Prediction-System" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
