--- a/index.html
+++ b/index.html
@@ -857,6 +857,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="backend development">
+              <a href="https://github.com/jaintirth/Student-Management-System" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/student-management-system.jpg" alt="student-management-system" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Student Management System</h3>
+
+                <p class="project-category">Backend Development</p>
+
+              </a>
+            </li>
+
             <!-- <li class="project-item  active" data-filter-item data-category="applications">
               <a href="#">
 
