update in frameworks

--- a/index.html
+++ b/index.html
@@ -653,10 +653,7 @@
             <li class="skills-item"><h5 class="h5">Web Development : HTML, CSS, JavaScript, PHP, WordPress </h5></li>
 
             <!-- Frameworks -->
-            <li class="skills-item"><h5 class="h5">Frameworks : Flask, Django, Django REST, Laravel, Bootstrap </h5></li>
-
-            <!-- Databases -->
-            <li class="skills-item"><h5 class="h5">Databases : MySQL, SQLite </h5></li>
+            <li class="skills-item"><h5 class="h5">Frameworks : Flask, Django, Laravel, Bootstrap </h5></li>
 
             <!-- Data Analysis & Machine Learning -->
             <li class="skills-item"><h5 class="h5">Data Analysis & ML : NumPy, Pandas, Scikit-learn, Matplotlib, Seaborn</h5></li>
